home store photo fixed too big

--- a/root/sdf/css/dark_style.css
+++ b/root/sdf/css/dark_style.css
@@ -813,7 +813,6 @@ textarea{
 
   .storeLinkImg{
     width: 100%;
-    height: auto;
     object-fit:;
   }
 
@@ -847,7 +846,7 @@ textarea{
     min-width: none;
     float: left;
     width:100%;
-    height:50%;
+    height: 200px;
     position: relative;
     border-style:none;
     border-radius: 10px 10px 0px 0px;
@@ -855,7 +854,7 @@ textarea{
   }
   .storePhotoPage{
     width: 100%;
-    height: auto;
+    height: 480px;
     object-fit:;
   }
   .storePageText {
@@ -895,7 +894,7 @@ textarea{
     }
     .storeLinkImg{
       width:100%;
-      height: auto;
+      height: 280px;
       object-fit:
     }
 
@@ -928,7 +927,7 @@ textarea{
       min-height: none;
       min-width: none;
       width:100%;
-      height:50%;
+      height: 200px;
       position: relative;
       border-style:none;
       border-radius: 10px 10px 0px 0px;
@@ -936,7 +935,7 @@ textarea{
     }
     .storePhotoPage{
       width: 100%;
-      height: auto;
+      height: 380px;
       object-fit:;
     }
     .storePageText {
@@ -976,7 +975,7 @@ textarea{
     }
     .storeLinkImg{
       width:100%;
-      height: auto;
+      height: 200px;
       object-fit:
     }
 
@@ -1011,7 +1010,7 @@ textarea{
       min-height: none;
       min-width: none;
       width:100%;
-      height:50%;
+      height: 200px;
       position: relative;
       border-style:none;
       border-radius: 10px 10px 0px 0px;
@@ -1019,7 +1018,7 @@ textarea{
     }
     .storePhotoPage{
       width: 100%;
-      height: auto;
+      height: 280px;
       object-fit:;
     }
     .storePageText {
