--- a/root/sdf/css/style.css
+++ b/root/sdf/css/style.css
@@ -880,7 +880,6 @@ box-shadow: 0px 0px 1px 1px rgba(224,221,224,1);
 
   .storeLinkImg{
     width: 100%;
-    height: auto;
     object-fit:;
   }
 
@@ -914,7 +913,7 @@ box-shadow: 0px 0px 1px 1px rgba(224,221,224,1);
     min-width: none;
     float: left;
     width:100%;
-    height:50%;
+    height: 200px;
     position: relative;
     border-style:none;
     border-radius: 10px 10px 0px 0px;
@@ -922,7 +921,7 @@ box-shadow: 0px 0px 1px 1px rgba(224,221,224,1);
   }
   .storePhotoPage{
     width: 100%;
-    height: auto;
+    height: 480px;
     object-fit:;
   }
   #formContentAccount, #formContentAddStore, #formContentEditStore, .manageStoreStyle, #profilePicContainer, #formContentAccount, .storePageText,.accountPrefTitle,.claimedDiscount,.accountSubPref,.accountPref,.accountPrefBtn{
@@ -953,7 +952,7 @@ box-shadow: 0px 0px 1px 1px rgba(224,221,224,1);
     }
     .storeLinkImg{
       width:100%;
-      height: auto;
+      height: 280px;
       object-fit:
     }
 
@@ -986,7 +985,7 @@ box-shadow: 0px 0px 1px 1px rgba(224,221,224,1);
       min-height: none;
       min-width: none;
       width:100%;
-      height:50%;
+      height: 200px;
       position: relative;
       border-style:none;
       border-radius: 10px 10px 0px 0px;
@@ -994,7 +993,7 @@ box-shadow: 0px 0px 1px 1px rgba(224,221,224,1);
     }
     .storePhotoPage{
       width: 100%;
-      height: auto;
+      height: 380px;
       object-fit:;
     }
 
@@ -1025,7 +1024,7 @@ box-shadow: 0px 0px 1px 1px rgba(224,221,224,1);
     }
     .storeLinkImg{
       width:100%;
-      height: auto;
+      height: 200px;
       object-fit:
     }
 
@@ -1062,7 +1061,7 @@ box-shadow: 0px 0px 1px 1px rgba(224,221,224,1);
       min-height: none;
       min-width: none;
       width:100%;
-      height:50%;
+      height: 200px;
       position: relative;
       border-style:none;
       border-radius: 10px 10px 0px 0px;
@@ -1070,7 +1069,7 @@ box-shadow: 0px 0px 1px 1px rgba(224,221,224,1);
     }
     .storePhotoPage{
       width: 100%;
-      height: auto;
+      height: 280px;
       object-fit:;
     }
 
